Update pom.xml2